[package]
authors = ["Davide Di Carlo <daddinuz@gmail.com>"]
description = "A dynamic container that combines the characteristics of a Vec and a LinkedList"
name = "array_list"
version = "0.4.0"
edition = "2024"
license = "MIT"
keywords = ["array", "collections", "linked-list", "list", "vec"]
rust-version = "1.85"
repository = "https://github.com/daddinuz/array_list"

[dev-dependencies]
quickcheck = { version = "1", default-features = false }
quickcheck_macros = { version = "1", default-features = false }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }

[features]
nightly_tests = []
